--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 
 # Binaries for programs and plugins
-*.exe
-*.exe~
-*.dll
-*.so
-*.dylib
+#*.exe
+#*.exe~
+#*.dll
+#*.so
+#*.dylib
 
 # Test binary, build with `go test -c`
 *.test
@@ -12,7 +12,7 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 
-vendor
-go.sum
-.id
-_tryout/*
+#vendor
+#go.sum
+#.id
+#_tryout/*
