--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 #*.dylib
 
 # Test binary, build with `go test -c`
-*.test
+#*.test
 
 # Output of the go coverage tool, specifically when used with LiteIDE
-*.out
+#*.out
 
 #vendor
 #go.sum
