--- a/test/MDK-ARM_LL_BARE_STM32F0308-DISCO/MDK-ARM/MDK-ARM_LL_BARE_STM32F0308-DISCO.uvprojx
+++ b/test/MDK-ARM_LL_BARE_STM32F0308-DISCO/MDK-ARM/MDK-ARM_LL_BARE_STM32F0308-DISCO.uvprojx
@@ -494,6 +494,11 @@
     <Layers>
       <Layer>
         <LayName>&lt;Project Info&gt;</LayName>
+        <LayDesc></LayDesc>
+        <LayUrl></LayUrl>
+        <LayKeys></LayKeys>
+        <LayCat></LayCat>
+        <LayLic></LayLic>
         <LayTarg>0</LayTarg>
         <LayPrjMark>1</LayPrjMark>
       </Layer>
