WRAP container added

--- a/test/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY/MDK-ARM/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY.uvprojx
+++ b/test/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY/MDK-ARM/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060960::V5.06 update 7 (build 960)::ARMCC</pCCUsed>
+      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -544,5 +544,20 @@
     </components>
     <files/>
   </RTE>
+
+  <LayerInfo>
+    <Layers>
+      <Layer>
+        <LayName>&lt;Project Info&gt;</LayName>
+        <LayDesc></LayDesc>
+        <LayUrl></LayUrl>
+        <LayKeys></LayKeys>
+        <LayCat></LayCat>
+        <LayLic></LayLic>
+        <LayTarg>0</LayTarg>
+        <LayPrjMark>1</LayPrjMark>
+      </Layer>
+    </Layers>
+  </LayerInfo>
 
 </Project>
