target header restructured, bare documented

--- a/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
@@ -10,7 +10,7 @@
       <TargetName>MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64</TargetName>
       <ToolsetNumber>0x4</ToolsetNumber>
       <ToolsetName>ARM-ADS</ToolsetName>
-      <pCCUsed>5060750::V5.06 update 6 (build 750)::.\ARMCC</pCCUsed>
+      <pCCUsed>5060960::V5.06 update 7 (build 960)::ARMCC</pCCUsed>
       <uAC6>0</uAC6>
       <TargetOption>
         <TargetCommonOption>
@@ -72,7 +72,7 @@
           <BeforeMake>
             <RunUserProg1>1</RunUserProg1>
             <RunUserProg2>0</RunUserProg2>
-            <UserProg1Name>trice u -i ../../../til.json -src ../../../ -v</UserProg1Name>
+            <UserProg1Name>trice u -v -i ../../../til.json -src ./ -src ../Core -src ../../../srcTrice.C</UserProg1Name>
             <UserProg2Name></UserProg2Name>
             <UserProg1Dos16Mode>0</UserProg1Dos16Mode>
             <UserProg2Dos16Mode>0</UserProg2Dos16Mode>
@@ -509,11 +509,6 @@
     <Layers>
       <Layer>
         <LayName>&lt;Project Info&gt;</LayName>
-        <LayDesc></LayDesc>
-        <LayUrl></LayUrl>
-        <LayKeys></LayKeys>
-        <LayCat></LayCat>
-        <LayLic></LayLic>
         <LayTarg>0</LayTarg>
         <LayPrjMark>1</LayPrjMark>
       </Layer>
