--- a/test/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY/MDK-ARM/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY.uvprojx
+++ b/test/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY/MDK-ARM/MDK-ARM_RTT0_BARE_STM32F03051R8Tx-DISCOVERY.uvprojx
@@ -503,11 +503,6 @@
           <GroupName>Trice</GroupName>
           <Files>
             <File>
-              <FileName>triceBareFifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceBareFifo.c</FilePath>
-            </File>
-            <File>
               <FileName>triceCheck.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceCheck.c</FilePath>
@@ -521,6 +516,11 @@
               <FileName>SEGGER_RTT.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\third_party\segger.com\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
+            </File>
+            <File>
+              <FileName>triceFifo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\triceFifo.c</FilePath>
             </File>
           </Files>
         </Group>
