--- a/test/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
@@ -458,11 +458,6 @@
           <GroupName>trice</GroupName>
           <Files>
             <File>
-              <FileName>triceBareFifo.c</FileName>
-              <FileType>1</FileType>
-              <FilePath>..\..\..\srcTrice.C\triceBareFifo.c</FilePath>
-            </File>
-            <File>
               <FileName>triceBareFifoToBytesBuffer.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceBareFifoToBytesBuffer.c</FilePath>
@@ -481,6 +476,11 @@
               <FileName>SEGGER_RTT.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\..\..\third_party\segger.com\SEGGER_RTT\RTT\SEGGER_RTT.c</FilePath>
+            </File>
+            <File>
+              <FileName>triceFifo.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\triceFifo.c</FilePath>
             </File>
           </Files>
         </Group>
