--- a/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64.uvprojx
@@ -485,34 +485,14 @@
             </File>
           </Files>
         </Group>
-        <Group>
-          <GroupName>::CMSIS</GroupName>
-        </Group>
       </Groups>
     </Target>
   </Targets>
 
   <RTE>
     <apis/>
-    <components>
-      <component Cclass="CMSIS" Cgroup="CORE" Cvendor="ARM" Cversion="4.3.0" condition="CMSIS Core">
-        <package name="CMSIS" schemaVersion="1.3" url="http://www.keil.com/pack/" vendor="ARM" version="4.5.0"/>
-        <targetInfos>
-          <targetInfo name="MDK-ARM_LL_UART_RTT0_ESC_STM32F030R8_NUCLEO-64"/>
-        </targetInfos>
-      </component>
-    </components>
+    <components/>
     <files/>
   </RTE>
-
-  <LayerInfo>
-    <Layers>
-      <Layer>
-        <LayName>&lt;Project Info&gt;</LayName>
-        <LayTarg>0</LayTarg>
-        <LayPrjMark>1</LayPrjMark>
-      </Layer>
-    </Layers>
-  </LayerInfo>
 
 </Project>
