--- a/test/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
+++ b/test/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64/MDK-ARM/MDK-ARM_LL_UART_WRAP_RTT0_BARE_STM32F030R8-NUCLEO-64.uvprojx
@@ -483,6 +483,11 @@
               <FileType>1</FileType>
               <FilePath>..\..\..\srcTrice.C\triceSeggerRTT.c</FilePath>
             </File>
+            <File>
+              <FileName>triceXteaCrypto.c</FileName>
+              <FileType>1</FileType>
+              <FilePath>..\..\..\srcTrice.C\triceXteaCrypto.c</FilePath>
+            </File>
           </Files>
         </Group>
       </Groups>
