fileWatcher ok, pack & pack2 ok

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -120,7 +120,7 @@
                      "-encoding",
                      "pack2L",
                      "-port",
-                     "COM5",
+                     "COM16",
                      "-baud",
                      "115200",
                      "-idlist",
@@ -195,10 +195,11 @@
             "program": "${workspaceFolder}/cmd/trice",
             "env": {},
             "args": ["update",
-                    "-dry-run",
                     "-v",
                     "-src",
                     "C:/repos/trice/srcTrice.C",
+                    "-src",
+                    "C:/repos/trice/test/MDK-ARM_LL_UART_RTT0_PACK_STM32F030R8-NUCLEO-64",
                     "-IDMethod",
                     "random",
                     "-idlist",
